# rybocheck

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml  create_database.sql  database_export.xml  database_schema.txt  drop_database.sql  example.env  package-lock.json  package.json
backend/migrations/: 20240830133143_setup.sql  20240830133251_insert_constants.sql  drop_database.sql  insert_constants.sql  setup_database.sql
backend/src/: database.rs  encryption.rs  jwt.rs  main.rs
backend/src/database/: auth.rs  connection.rs  mod.rs  users.rs
backend/src/routes/: auth.rs  root.rs
backend/src/security/: encryption.rs  jwt.rs  mod.rs
backend/src/utils/: error.rs  mod.rs  run_scripts.rs
frontend/: .metadata  README.md  example.env  pubspec.yaml
frontend/android/: settings.gradle
frontend/android/app/: build.gradle
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart  router.dart
frontend/lib/l10n/: app_en.arb  app_pl.arb
frontend/lib/src/components/: main_scaffold.dart  text_switch.dart
frontend/lib/src/utils/: allow_routes.dart  encryption.dart  jwt.dart  network.dart  toast.dart
frontend/lib/src/views/: approvals.dart  home.dart  map.dart  map_post.dart  new_post.dart  post.dart  (+4 more)
frontend/linux/: CMakeLists.txt  my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/flutter/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
(+15 files in other folders)
