[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
argon2 = "0.5.3"
base16ct = "0.2.0"
base64 = "0.22.1"
dotenvy = "0.15.7"
env_logger = "0.11.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "time" ] }
